Colab を使用して作成されました

--- a/Prog2_11.ipynb
+++ b/Prog2_11.ipynb
@@ -5,6 +5,7 @@
     "colab": {
       "name": "Prog2_11.ipynb",
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +24,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/t-tokiwa/Prog2_11th/blob/2024/Prog2_11.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Od63/Prog2_11th/blob/2024/Prog2_11.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -3788,13 +3789,41 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "PyYNzxJPCtjA"
+        "id": "PyYNzxJPCtjA",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "98b9b011-fe9f-49dc-e0a9-e419365e1465"
       },
       "source": [
-        "# ここに自作問題の回答（pythonプログラム）を書いてください"
+        "# ここに自作問題の回答（pythonプログラム）を書いてください\n",
+        "#素数か判断する\n",
+        "def is_prime(n):\n",
+        "  if n <= 1:\n",
+        "    return False\n",
+        "  for i in range(2, int(n**0.5) + 1):\n",
+        "    if n % i == 0:\n",
+        "      return False\n",
+        "  return True\n",
+        "\n",
+        "num = int(input(\"整数を入力してください: \"))\n",
+        "\n",
+        "if is_prime(num):\n",
+        "  print(num, \"は素数です。\")\n",
+        "else:\n",
+        "  print(num, \"は素数ではありません。\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "整数を入力してください: 17\n",
+            "17 は素数です。\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
